# DataPrepToolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: full_workflow.ipynb  full_workflow.py
src/datapreptoolkit/: __init__.py  analyzer.py  cleaner.py  config.py  exceptions.py  loader.py  optimizer.py  outliers.py  reporter.py  utils.py  validator.py
tests/: conftest.py  outlier_test.csv  sample_data.csv  test_analyzer.py  test_cleaner.py  test_config.py  test_exceptions.py  test_integration.py  test_loader.py  test_optimizer.py  test_outliers.py  test_reporter.py  test_utils.py  test_validator.py
